--- a/WebVTI/nbproject/project.properties
+++ b/WebVTI/nbproject/project.properties
@@ -43,7 +43,8 @@ javac.classpath=\
     ${file.reference.jstl.jar}:\
     ${file.reference.appengine-api-1.0-sdk-1.6.5.jar}:\
     ${libs.hibernate-persistence.classpath}:\
-    ${file.reference.commons-fileupload-1.2.2.jar}
+    ${file.reference.commons-fileupload-1.2.2.jar}:\
+    ${libs.OpenCVS.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
